# QtProgramming

01_ObjectsAndCoreTypes/: CMakeLists.txt  main.cpp
DataProcessing/: CMakeLists.txt  Main.qml  MySingleton.qml  main.cpp  qml.qrc  qmldir
DataProcessing/Widgets/: Btn.qml
Design/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
GraphicsView/: CMakeLists.txt  main.cpp
GraphicsView_QML/: CMakeLists.txt  Main.qml  main.cpp
ImageCompressor/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
ImageCompressor/scripts/: folder.ps1  image.ps1
Inter-Process_Communication/client/: CMakeLists.txt  main.cpp
Inter-Process_Communication/server/: CMakeLists.txt  main.cpp
ModelsAndViews/: CMakeLists.txt  DialogWindow.qml  Dialog_Template.qml  Main.qml  PokeDetail.qml  Pokemons.qml  main.cpp
ObjectCommunication/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
Pragma_Singleton/: CMakeLists.txt  Main.qml  main.cpp
Pragma_Singleton/Datos/: CMakeLists.txt  Settings.qml
XML/: CMakeLists.txt  Main.qml  main.cpp
set_resource_files/: CMakeLists.txt  Main.qml  main.cpp  qml.qrc
set_resource_files/qml/Datapools/: Settings.qml
set_resource_files/qml/Widgets/: Btn.qml
